--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DIALOGFLOW_PROJECT_ID=travel-shhmkj
-GOOGLE_APPLICATION_CREDENTIALS=C:\Users\Rafee\PythonProject\untitled\travel_assistance\travel-shhmkj-076c4233122b.json
+DIALOGFLOW_PROJECT_ID=PROJECT_ID
+GOOGLE_APPLICATION_CREDENTIALS=C:\Users\Rafee\PythonProject\untitled\travel_assistance\FILE_NAME.json
